# visibility-testing

./: CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml
docs/: README.md  dashboard.js  docker-guide.md  index.html  reference-manifest.json  results-manifest.json  styles.css  tolerance-spec.md  update-dashboard.sh
implementations/cpp-sgp4/: CMakeLists.txt  Dockerfile
implementations/cpp-sgp4/src/: main.cpp
results/: cpp-sgp4_001_iss_nyc_20251026_154307.json  cpp-sgp4_001_iss_nyc_20251026_154320.json  cpp-sgp4_001_iss_nyc_20251026_160238.json  cpp-sgp4_001_iss_nyc_20251026_160628.json  cpp-sgp4_001_iss_nyc_20251026_160728.json  cpp-sgp4_001_iss_nyc_20251026_160805.json  cpp-sgp4_001_iss_nyc_20251026_161010.json  cpp-sgp4_001_iss_nyc_20251026_161025.json  cpp-sgp4_001_iss_nyc_20251026_161145.json  cpp-sgp4_001_iss_nyc_20251026_161207.json  cpp-sgp4_001_iss_nyc_20251026_161215.json  cpp-sgp4_001_iss_nyc_20251026_161247.json  cpp-sgp4_001_iss_nyc_20251026_161408.json  cpp-sgp4_001_iss_nyc_20251026_161438.json  cpp-sgp4_001_iss_nyc_20251026_162335.json  cpp-sgp4_001_iss_nyc_20251026_162454.json  cpp-sgp4_001_iss_nyc_20251026_162819.json  cpp-sgp4_002_starlink_sf_20251026_154320.json  cpp-sgp4_002_starlink_sf_20251026_161025.json  cpp-sgp4_002_starlink_sf_20251026_161215.json  cpp-sgp4_002_starlink_sf_20251026_161247.json  cpp-sgp4_002_starlink_sf_20251026_161438.json  cpp-sgp4_002_starlink_sf_20251026_162335.json  cpp-sgp4_002_starlink_sf_20251026_162454.json  cpp-sgp4_003_gps_denver_20251026_154320.json  cpp-sgp4_003_gps_denver_20251026_161025.json  cpp-sgp4_003_gps_denver_20251026_161215.json  cpp-sgp4_003_gps_denver_20251026_161247.json  cpp-sgp4_003_gps_denver_20251026_161438.json  cpp-sgp4_003_gps_denver_20251026_162335.json  cpp-sgp4_003_gps_denver_20251026_162454.json  (+674 more)
test-runner/: Cargo.toml  README.md
test-runner/src/: main.rs
(+75 files in other folders)
